stop service bar items from jumping on hover and active

--- a/themes/systemli/src/main.css
+++ b/themes/systemli/src/main.css
@@ -102,7 +102,7 @@ dl {
     @apply flex items-center py-2 border-b text-l text-black font-bold;
 }
 .service-bar-link:hover {
-    @apply bg-white border-none pl-4 ml-0 no-underline;
+    @apply bg-white border-transparent pl-4 ml-0 no-underline;
 }
 
 /* styles for autogenerated pagination */
